--- a/top-tracks-festival-playlist/package.json
+++ b/top-tracks-festival-playlist/package.json
@@ -10,6 +10,7 @@
     "clean": "rmdir /s /q node_modules && del package-lock.json"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
