--- a/top-tracks-festival-playlist/package.json
+++ b/top-tracks-festival-playlist/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.11.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
